--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 @plugin "daisyui/theme" {
   name: "edal";
   default: true;
-  prefersdark: false;
+  prefersdark: true;
   color-scheme: "light";
   --color-base-100: oklch(100% 0 0);
   --color-base-200: oklch(96% 0.003 264.542);
