--- a/src/app.css
+++ b/src/app.css
@@ -21,7 +21,7 @@
   --color-info-content: oklch(98% 0.019 200.873);
   --color-success: oklch(76% 0.233 130.85);
   --color-success-content: oklch(98% 0.031 120.757);
-  --color-warning: oklch(76% 0.188 70.08);
+  --color-warning: oklch(0.7706 0.148 97.41);
   --color-warning-content: oklch(98% 0.022 95.277);
   --color-error: oklch(63% 0.237 25.331);
   --color-error-content: oklch(96% 0.015 12.422);
