--- a/src/app.css
+++ b/src/app.css
@@ -15,7 +15,7 @@
   --color-secondary-content: oklch(98% 0.022 95.277);
   --color-accent: #F47D20;
   --color-accent-content: oklch(97% 0.021 166.113);
-  --color-neutral: oklch(21% 0.034 264.665);
+  --color-neutral: #314158 ;
   --color-neutral-content: oklch(98% 0.002 247.839);
   --color-info: oklch(71% 0.143 215.221);
   --color-info-content: oklch(98% 0.019 200.873);
